--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "description": "",
   "main": "index.js",
+  "module":"index.js",
   "repository": "https://github.com/nanyanchao/react-redux-saga-nyc.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
